feat: Add employee dialog on the Employees screen
